--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "incremental": true,
     "noEmitOnError": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    // "typeRoots": [
+    //   "./node_modules/@types",
+    //   "src/@types"
+    // ]
   },
 }
