pub-develop 폴더 내의 파일이 tsc에 의해 감시되고  컴파일 되던 동작을 번들링을 위해 esbuild가 따로 수행하도록 변경.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "references": [
-    {"path": "./pub-develop/js"},
+    // {"path": "./pub-develop/js"},
     {"path": "./src"},
   ],
   "compilerOptions": {
