--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "dev:nodemon": "nodemon",
+    "dev:front": "esbuild pub-develop/js/main.ts --bundle --minify --platform=browser format=esm --outdir=public/js --watch",
     "build:ts": "tsc --build",
     "build:es-file": "node esbuild.js",
     "css": "postcss pub-develop/css/tailwind.css -o public/css/main.css",
@@ -26,6 +27,7 @@
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.2",
     "ws": "^8.13.0"
   }
