esbuild.js 파일에서 pub-develop/js 폴더의 모든 ts 확장자 파일들들을 재귀적으로 읽어 컴파일 및 watch 할 수 있도록 구현. 실제 동작 확인!

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "dev:nodemon": "nodemon",
-    "dev:front": "esbuild pub-develop/js/main.ts --bundle --minify --platform=browser format=esm --outdir=public/js --watch",
+    "dev:front": "node esbuild.js --watch",
     "build:ts": "tsc --build",
     "build:es-file": "node esbuild.js",
     "css": "postcss pub-develop/css/tailwind.css -o public/css/main.css",
