--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css:watch": "yarn tailwindcss -i pub-develop/css/tailwind.css -o public/css/main.css -w"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "autoprefixer": "^10.4.14",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
