webrtc 이용, 화면에 캠 영상 띄우기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     {"path": "./src"},
   ],
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "nodenext",
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
